# QTChatClient

./: CMakeLists.txt  README.md  build.bat  main.cpp  resources.qrc
include/: AppController.h  ChatDetailWidget.h  ChatListWidget.h  ClientSocket.h  LoadingDialog.h  LoginDialog.h  mainwindow.h
src/: AppController.cpp  ChatDetailWidget.cpp  ChatListWidget.cpp  ClientSocket.cpp  LoadingDialog.cpp  LoginDialog.cpp  mainwindow.cpp
utils/: crypto.h
utils/include/: CryptoUtils.h
utils/src/: CryptoUtils.cpp
